Fixed z-index for shop page header

--- a/public/css/admin_custom.css
+++ b/public/css/admin_custom.css
@@ -5,7 +5,7 @@
     padding-bottom: 60px;
     position: fixed;
     top: 60px;
-    z-index: 9999;
+    z-index: 4;
     background-color: #fff;
 }
 
